# AlphaEngine

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/basic_game/: Cargo.toml  infinite_count.rhai  loop.rhai  rhai_io.rs
examples/basic_game/src/: card.rs  main.rs
examples/minimal_setup/: Cargo.toml
examples/minimal_setup/src/: main.rs
examples/network_example/: Cargo.toml
examples/network_example/src/: main.rs
src/: Application.rs  engine.rs  event.rs  game.rs  game_objects.rs  helpers.rs  lib.rs  net.rs  private_system.rs  renderer.rs  rendering.rs  scripting.rs  shaders.rs  sys.rs  system.rs  text.rs  window.rs
src/animation/: animations.rs
src/audio/: audio_engine.rs
src/event/: event_manager.rs
src/game_objects/: game_object.rs
src/game_objects/implementations/: card.rs  character.rs  generic_game_object.rs  mod.rs
src/helpers/: image.rs  math.rs
src/rendering/: mesh.rs  renderer.rs  texture.rs  texture_2d.rs  vertex.rs
src/roguelike/: card_pool.rs  deck.rs  mod.rs
src/shaders/: basic_projection_view_model.frag  basic_projection_view_model.vert  grayscale.frag  inverted.frag  text_rendering.frag  text_rendering.vert
src/sys/: axes.rs  cam.rs  fullscreen.rs  game_object.rs  game_objects.rs  implementations.rs  private_system.rs  system.rs  transform.rs
src/sys/cam/: camera.rs  projection.rs  projection_ortho.rs  projection_perspective.rs
src/text/: character.rs  font.rs  render_text.rs
src/utils/: read_file.rs
