[package]
name = "alpha_engine"
version = "0.1.0"
license = "MIT"
authors = ["Sebastian Alfaro <sebastian.alfaro@outlook.cl>"]
description= "Game engine for 2D games that uses OpenGl for it's rendering."
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "*"
glutin = "0.27.0"
nalgebra-glm = "*"
image = "*"
relative-path = "1.5.0"
ab_glyph = "0.2.11"

